language/move-lang/tests/move_check/naming/invalid_call_lhs_parens_around_name.exp
error: 

   ┌── tests/move_check/naming/invalid_call_lhs_parens_around_name.move:3:9 ───
   │
 3 │         (foo)()
   │         ^^^^^^^ Invalid function call
   ·
 3 │         (foo)()
   │         ----- Expected: a name, a dotted Module access, or dotted access of an expression
   │

